--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,7 @@
 [deps]
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
